# services/app-auth/internal/routes/handlers/login.go
@@ -12,7 +12,7 @@ func (h Handler) Login(c *gin.Context) {
 	var responseBody dto.DefaultRes[*dto.LoginInitRes]
 
 	if err := c.ShouldBindJSON(&requestBody); err != nil {
-		responseBody = badRequest[*dto.LoginInitRes](err.Error())
+		responseBody = handleError[*dto.LoginInitRes](err)
 		c.JSON(http.StatusBadRequest, responseBody)
 		return
 	}
@@ -22,43 +22,56 @@ func (h Handler) Login(c *gin.Context) {
 
 	usr, err := h.AuthUC.LoginUser(ctx, requestBody)
 	if err != nil {
-		responseBody = badRequest[*dto.LoginInitRes](err.Error())
-		// TODO Process error types
-		c.JSON(http.StatusBadRequest, responseBody)
+		responseBody = handleError[*dto.LoginInitRes](err)
+		c.JSON(responseBody.Code, responseBody)
 		return
 	}
 
-	responseBody = okResponse[*dto.LoginInitRes](usr)
-	c.JSON(200, responseBody)
+	responseBody = okResponse[*dto.LoginInitRes](usr, "")
+	c.JSON(responseBody.Code, responseBody)
+}
+
+func (h Handler) ResendLoginOTP(c *gin.Context, trackingUuid string) {
+	var responseBody dto.DefaultRes[*dto.ResendOTPRes]
+	var resendOTPReq dto.ResendOTPReq = dto.ResendOTPReq{
+		TrackingUID: trackingUuid,
+	}
+	res, err := h.AuthUC.ResendLoginOTP(resendOTPReq)
+	if err != nil {
+		responseBody = handleError[*dto.ResendOTPRes](err)
+		c.JSON(responseBody.Code, responseBody)
+	}
+
+	responseBody = okResponse[*dto.ResendOTPRes](res, res.Message)
+	c.JSON(responseBody.Code, responseBody)
 }
 
 func (h Handler) VerifyLoginOTP(c *gin.Context, trackingUuid string) {
 	// Get trackingID
 	// Body otpCode
-	var responseBody dto.DefaultRes[*dto.OtpVerificationRes]
+	var responseBody dto.DefaultRes[*dto.LoginRes]
 	var otpBody dto.LoginOTPBody
 	mainCtx, cancelFunc := context.WithCancel(context.Background())
 	defer cancelFunc()
 
 	if err := c.ShouldBindJSON(&otpBody); err != nil {
-		responseBody = badRequest[*dto.OtpVerificationRes](err.Error())
-		c.JSON(http.StatusBadRequest, responseBody)
+		responseBody = handleError[*dto.LoginRes](err)
+		c.JSON(responseBody.Code, responseBody)
 		return
 	}
 
 	requestBody := dto.OtpVerificationReq{
 		TrackingUID: trackingUuid,
-		OtpCode:     trackingUuid,
+		OtpCode:     otpBody.OtpCode,
 	}
 
 	res, err := h.AuthUC.VerifyLoginOTP(mainCtx, requestBody)
 	if err != nil {
-		responseBody = badRequest[*dto.OtpVerificationRes](err.Error())
-		// TODO Process error types
-		c.JSON(http.StatusBadRequest, responseBody)
+		responseBody = handleError[*dto.LoginRes](err)
+		c.JSON(responseBody.Code, responseBody)
 		return
 	}
 
-	responseBody = okResponse[*dto.OtpVerificationRes](res)
-	c.JSON(http.StatusOK, responseBody)
+	responseBody = okResponse[*dto.LoginRes](res, "login success")
+	c.JSON(responseBody.Code, responseBody)
 }
