# services/app-auth/internal/routes/handlers/reset.go
@@ -9,72 +9,73 @@ import (
 func (h Handler) Reset(c *gin.Context) {
 	//get the request body
 	var requestBody dto.OtpGenReq
-	var responseBody dto.DefaultRes[*dto.ResetRes]
+	var responseBody dto.DefaultRes[*dto.OtpGenRes]
 
 	//parse the request body
 	if err := c.ShouldBindJSON(&requestBody); err != nil {
-		responseBody.Message = "Password reset failed"
-		responseBody.Code = 400
-		responseBody.Data = nil
-		responseBody.Error = "Invalid request."
-		c.JSON(400, responseBody)
+		responseBody = handleError[*dto.OtpGenRes](err)
+		c.JSON(responseBody.Code, responseBody)
 		return
 	}
 	//process the request
 	ctx, cancel := context.WithCancel(context.Background())
 	defer cancel()
 	// check if the user exists and generate a reset request ID
-	_, err := h.AuthUC.SendResetOtp(ctx, requestBody)
+	res, err := h.AuthUC.SendResetOtp(ctx, requestBody)
 
 	if err != nil {
-		responseBody.Message = "Password reset failed"
-		responseBody.Code = 400
-		responseBody.Data = nil
-		responseBody.Error = "Invalid request"
+		responseBody = handleError[*dto.OtpGenRes](err)
+		c.JSON(responseBody.Code, responseBody)
 		c.JSON(400, responseBody)
 		return
 	}
-	responseBody.Message = "Password reset successful"
-	responseBody.Code = 200
-	responseBody.Data = nil
-	responseBody.Error = ""
-	c.JSON(200, responseBody)
+	responseBody = okResponse[*dto.OtpGenRes](res, res.Message)
+	c.JSON(responseBody.Code, responseBody)
 }
 
 func (h Handler) VerifyResetOTP(c *gin.Context, trackingUuid string) {
 	//get the request body
-	var requestBody dto.OtpVerificationReq
+	var requestBody dto.RequestOTP
 	var responseBody dto.DefaultRes[*dto.OtpVerificationRes]
 
 	//parse the request body
 	if err := c.ShouldBindJSON(&requestBody); err != nil {
-		responseBody.Message = "Verify OTP failed"
-		responseBody.Code = 400
-		responseBody.Data = nil
-		responseBody.Error = "Invalid request."
-		c.JSON(400, responseBody)
+		responseBody = handleError[*dto.OtpVerificationRes](err)
+		c.JSON(responseBody.Code, responseBody)
 		return
 	}
 
+	otpVerificationReq := dto.OtpVerificationReq{
+		TrackingUID: trackingUuid,
+		OtpCode:     requestBody.OtpCode,
+	}
 	//process the request
 	ctx, cancel := context.WithCancel(context.Background())
 	defer cancel()
 	// verify the OTP for password reset
-	_, err := h.AuthUC.VerifyResetOTP(ctx, trackingUuid, requestBody)
+	verificationRes, err := h.AuthUC.VerifyResetOTP(ctx, trackingUuid, otpVerificationReq)
 	if err != nil {
-		responseBody.Message = "Verify OTP failed"
-		responseBody.Code = 400
-		responseBody.Data = nil
-		responseBody.Error = "Invalid request"
-		c.JSON(400, responseBody)
+		responseBody = handleError[*dto.OtpVerificationRes](err)
+		c.JSON(responseBody.Code, responseBody)
 		return
 	}
-	responseBody.Message = "OTP verified successfully"
-	responseBody.Code = 200
-	responseBody.Data = nil
-	responseBody.Error = ""
-	c.JSON(200, responseBody)
+	responseBody = okResponse[*dto.OtpVerificationRes](verificationRes, "otp verified successfully")
+	c.JSON(responseBody.Code, responseBody)
+}
 
+func (h Handler) ResendResetOTP(c *gin.Context, trackingUuid string) {
+	var responseBody dto.DefaultRes[*dto.ResendOTPRes]
+	var resendOTPReq dto.ResendOTPReq = dto.ResendOTPReq{
+		TrackingUID: trackingUuid,
+	}
+	res, err := h.AuthUC.ResendResetOTP(resendOTPReq)
+	if err != nil {
+		responseBody = handleError[*dto.ResendOTPRes](err)
+		c.JSON(responseBody.Code, responseBody)
+	}
+
+	responseBody = okResponse[*dto.ResendOTPRes](res, res.Message)
+	c.JSON(responseBody.Code, responseBody)
 }
 
 func (h Handler) ChangePassword(c *gin.Context, trackingUuid string) {
@@ -84,29 +85,21 @@ func (h Handler) ChangePassword(c *gin.Context, trackingUuid string) {
 
 	//parse the request body
 	if err := c.ShouldBindJSON(&requestBody); err != nil {
-		responseBody.Message = "change password failed"
-		responseBody.Code = 400
-		responseBody.Data = nil
-		responseBody.Error = "Invalid request"
-		c.JSON(400, responseBody)
+		responseBody = handleError[*dto.ResetRes](err)
+		c.JSON(responseBody.Code, responseBody)
 		return
 	}
 	//process the request
 	ctx, cancel := context.WithCancel(context.Background())
 	defer cancel()
 	// check if the user exists and change the password
-	_, err := h.AuthUC.ChangePassword(ctx, trackingUuid, requestBody)
+	res, err := h.AuthUC.ChangePassword(ctx, trackingUuid, requestBody)
 	if err != nil {
-		responseBody.Message = "Change password failed"
-		responseBody.Code = 400
-		responseBody.Data = nil
-		responseBody.Error = "Invalid request"
-		c.JSON(400, responseBody)
+		responseBody = handleError[*dto.ResetRes](err)
+		c.JSON(responseBody.Code, responseBody)
 		return
 	}
-	responseBody.Message = "Password changed successfully"
-	responseBody.Code = 200
-	responseBody.Data = nil
-	responseBody.Error = ""
-	c.JSON(200, responseBody)
+
+	responseBody = okResponse[*dto.ResetRes](res, "Password change successful")
+	c.JSON(responseBody.Code, responseBody)
 }
